# autobidsify

./: .autobidsify_session  README.md  pyproject.toml  run_all_tests.sh  setup.py
.github/workflows/: execval_build.yml  execval_release.yml  full_release.yml  run_test.yml
app/execval/: build.spec  main.py  requirements.txt  worker.py
autobidsify/: __main__.py  anonymize.py  llm.py
autobidsify/converters/: __init__.py  eeg_convert.py  executor.py  planner.py
autobidsify/stages/: evidence.py  ingest.py  trio.py
tests/: test_classification.py  test_executor.py
